--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script type="text/javascript" src="js/phaser.js"></script>
 </head>
 <body>
+    <script src="js/demo.js"></script>
     <script src="js/main.js"></script>
 </body>
 </html>
