Cleaned up scene

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <style>body {margin: unset;}</style>
 </head>
 <body>
-    <script src="js/demo.js"></script>
+    <script src="js/scene1.js"></script>
     <script src="js/main.js"></script>
 </body>
 </html>
