--- a/index.html
+++ b/index.html
@@ -1,16 +1,25 @@
-<!doctype html>
+<!DOCTYPE html>
+
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Artistieke Katastrophe</title>
-    <script type="text/javascript" src="js/phaser.js"></script>
-    <style>body {margin: unset;}</style>
+	<meta charset="utf-8" />
+	<title>TypeScript HTML App Template</title>
+	<script src="lib/phaser.min.js"></script>
+	<script src="bin/game.js"></script>
 </head>
+
 <body>
-    <script src="js/scene1.js"></script>
-    <script src="js/main.js"></script>
+	<div id="content"></div>
+
 </body>
+
+<script>
+
+	window.onload = () => {
+		var game = new MyGame.Game();
+	};
+
+</script>
+
 </html>
