Added test assets

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <head>
 	<meta charset="utf-8" />
-	<title>TypeScript HTML App Template</title>
+	<title>CLE 4 game</title>
 	<script src="lib/phaser.min.js"></script>
 	<script src="bin/game.js"></script>
 </head>
