--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 	<script src="bin/game.js"></script>
 </head>
 
-<body>
+<body style="background-color: lightgrey; text-align: center;">
+	<h1 style="font-family: Arial, Helvetica, sans-serif; font-size: 40px">Artistieke katastrophe!</h1>
 	<div id="content"></div>
 
 </body>
