Updated menu with sprites

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<meta charset="utf-8" />
 	<title>CLE 4 game</title>
 	<link rel="stylesheet" href="style.css">
+	<link href="https://fonts.googleapis.com/css?family=Assistant:800" rel="stylesheet">
 	<script src="lib/phaser.min.js"></script>
 	<script src="bin/game.js"></script>
 </head>
