Changed asset directories

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 	<div class="parent">
 		<div class="game">
-			<img src="assets/logo.png" alt="logo">
+			<img src="assets/UI/Website/logo.png" alt="logo">
 			<div id="content"></div>
 		</div>
 	</div>
